# solution_prep

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: 82-ph-sensor.rules
launch/: all_serial_nodes.launch  ph_sensor.launch  solution_stack.launch
scripts/: IPC.py  beaker_manipulator.py  model.py  orchestrator.py  pH_controller.py  pH_serial.py  pipette_controller.py  pipette_twice_controller.py  tweezers_controller.py
scripts/1734448311.8315692/: best.pth  last.pth
sketchbook/: phMeterSample.ino
srv/: BeakerMani.srv  PipetteDo.srv  PipetteDoTwice.srv  TweezersDraw.srv  pHMeasure.srv
